# mcp_sh_bpmn

./: .gitignore  README.md  pyproject.toml
diagrams/: agent-command-generator-workflow.drawio  deep-research-workflow.drawio
src/mcp_sh_bpmn/: __init__.py  bpmn_classifier.py  drawio_loader.py  process_model.py  server.py
tests/: helpers.py  test_bpmn_classifier.py  test_drawio_loader.py  test_process_model.py  test_server.py
