[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sh-bpmn"
version = "0.1.0"
description = "MCP server for parsing Draw.io BPMN diagrams and exposing process definitions as queryable tools"
readme = {text = "MCP server for parsing Draw.io BPMN diagrams", content-type = "text/plain"}
requires-python = ">=3.10"
authors = [
    { name = "SQSLN Homebase" }
]
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "defusedxml>=0.7.0",
]

[project.scripts]
mcp-sh-bpmn = "mcp_sh_bpmn.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
asyncio_mode = "strict"
